syntax = "proto3";
package consistenthash;

option go_package = "proto/consistenthash.proto;consistenthash_proto";

service ConsistentHash {
    rpc TestConnection (TestRequest) returns (GenericResponse) {}
    rpc AddFile (stream UploadFileRequest) returns (UploadStatus) {}
    rpc NotifyNewNodeAdded (NodeInfo) returns (NodeInfoResponse) {}
    rpc GetFile (GetFileRequest) returns (GetFileResponse) {}
    rpc GetNodeInfo (Empty) returns (NodeInfo) {}
    rpc UpdateSuccessor (UpdateNeighbourRequest) returns (UpdateNeighbourResponse) {}
    rpc UpdatePredecessor (UpdateNeighbourRequest) returns (UpdateNeighbourResponse) {}
}

// Update Successor or Predecessor with new address
message UpdateNeighbourRequest {
    string address = 1;
    int64 position = 2;
}

message UpdateNeighbourResponse {
    string message = 1;
}

// Testing connection
message TestRequest {
    string message = 1;
}

message GenericResponse {
    string message = 1;
}

message Empty {

}

// Addfile
message CustomFile {
    bytes contents = 1;
    string filename = 2;
}

message UploadStatus {
    string Message = 1;
}

message UploadFileRequest {
    oneof data {
        string filename = 1;
        bytes chunk_data = 2;
    }
}

// Notify new node added to network
message NodeInfo {
    int64 position = 1;
    string address = 2;
}

message NodeInfoResponse {
    bool isSucc = 1;
    bool isPred = 2;
    int64 position = 3;
}

// Request a file from a node
message GetFileRequest {
    string filename = 1;
    string returnAddress = 2;
}

message GetFileResponse {
    string message = 1;
}
